codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__mcp_server_elicitation__tests__mcp_server_elicitation_approval_form_with_session_persist.snap
---
source: tui/src/bottom_pane/mcp_server_elicitation.rs
expression: "render_snapshot(&overlay, Rect::new(0, 0, 120, 16))"
---
                                                                                                                        
  Field 1/1                                                                                                             
  Allow this request?                                                                                                   
  › 1. Allow                   Run the tool and continue.                                                               
    2. Allow for this session  Run the tool and remember this choice for this session.                                  
    3. Always allow            Run the tool and remember this choice for future tool calls.                             
    4. Cancel                  Cancel this tool call                                                                    
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
  enter to submit | esc to cancel
